<resources>
    <string name="app_name">DRIP-NO-MORE</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Button1">300 ml</string>
    <string name="Button2">150ml</string>
    <string name="Button3">1L</string>
    <string name="Button4">500ml</string>
    <string name="Button5">2L</string>
    <string name="Button6">3L</string>
</resources>